Fixed Login-Page Frontend issues
Fixed the HackMerced logo being too big at lower resolutions, added a paragraph to login-resetpassword page, fixed the auth login buttons on the login page, and increased the width of the submit buttons on login page and login-resetpassword page. We still need to link the 'Create an Account' button to the sign-up page, and link the three auth icons to the correct links as well as work on the backend for them.

--- a/src/pages/Login-ResetPassword/login-resetpassword.scss
+++ b/src/pages/Login-ResetPassword/login-resetpassword.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    min-height: 80vh;
+    min-height: 80vh; //Prevents any white space under Footer
 
     .center-container {
         position: relative;
@@ -32,6 +32,12 @@
             padding-top: 2.5%;
             height: 140px;
             width: 120px;
+
+            @media only screen and (max-width: 400px) {
+                //'max-width' = 400px AND LOWER
+                height: 120px;
+                width: 100px;
+            }
         }
         h1 {
             //'LOGIN' below hackmerced logo
@@ -39,11 +45,29 @@
             font-weight: bold;
             font-size: 30px;
             text-align: center;
-            padding: 1% 0% 1% 0%;
+            padding: 1% 1% 1% 1%;
+            //These bottom three keep the wording centered. We'd just need to media query at lower resolutions.
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+
+            @media only screen and (max-width: 300px) {
+                //'max-width' = 300px AND LOWER
+                font-size: 20px;
+                font-weight: bolder;
+            }
+        }
+        p {
+            text-align: center;
+            padding: 2%;
+
+            u {
+                font-weight: normal;
+            }
         }
 
         .form-container {
-            padding: 0% 0% 5% 0%;
+            padding: 0% 0% 8% 0%;
 
             ::placeholder {
                 /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -73,7 +97,7 @@
                 box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.212);
             }
             .submitbutton {
-                width: 45%;
+                width: 80%;
                 height: 70px;
                 border-radius: 65px;
                 background-color: white;
