--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,8 +1,9 @@
 .login-page {
-    padding: .5% 0% 7.5% 0%;
+    padding: 0.5% 0% 7.5% 0%;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    min-height: 80vh; //Prevents any white space under Footer
 
     .center-container {
         position: relative;
@@ -28,6 +29,14 @@
             display: block;
             margin: auto;
             padding-top: 2.5%;
+            height: 140px;
+            width: 120px;
+
+            @media only screen and (max-width: 400px) {
+                //'max-width' = 400px AND LOWER
+                height: 120px;
+                width: 100px;
+            }
         }
         h1 {
             //'LOGIN' below hackmerced logo
@@ -35,7 +44,16 @@
             font-weight: bold;
             font-size: 30px;
             text-align: center;
-            padding: 1% 0% 1% 0%;
+            padding: 1% 1% 1% 1%;
+            //These bottom three keep the wording centered. We'd just need to media query at lower resolutions.
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+
+            @media only screen and (max-width: 300px) {
+                //'max-width' = 300px AND LOWER
+                font-size: 25px;
+            }
         }
 
         .flex-container {
@@ -43,6 +61,7 @@
             flex-wrap: wrap; //makes 'Create an Account' go under 'Forgot Password?' at lower resolutions
             justify-content: space-around; //puts even space on the left and right of contents
             padding: 0% 4% 3% 4%;
+            margin-top: -1%;
 
             .flex-item {
                 display: inline;
@@ -50,46 +69,49 @@
             }
         }
 
-        .loginicons {
-            text-align: center; //centers everything inside loginicons div
+        p {
+            //"Or log in with"
+            color: white;
+            font-weight: 510;
+            font-size: 22px;
+            position: static;
+            display: block;
+            padding: 2% 0% 0% 0%;
+            text-align: center;
+        }
+        .auth-flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            font-size: 70px;
+            padding-right: 2%;
+            padding-left: 2%;
 
-            p {
-                color: white;
-                font-weight: 510;
-                font-size: 22px;
-                position: static;
-                display: block;
-                padding: 3% 0% 0% 0%;
-            }
             .facebookicon {
-                font-size: 80px;
-                padding: 3% 1% 2% 1%;
                 color: #4c6ef5;
             }
             .googleicon {
-                font-size: 80px;
-                padding: 3% 1% 2% 1%;
                 color: #fa7000;
             }
             .githubicon {
-                font-size: 80px;
-                padding: 3% 2% 2% 2%;
                 color: rgb(39, 38, 38);
             }
         }
 
-       
-        ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-        
+        ::placeholder {
+            /* Chrome, Firefox, Opera, Safari 10.1+ */
+
             opacity: 1; /* Firefox */
             font-weight: lighter;
             font-size: 18px;
-          
-            :-ms-input-placeholder { /* Internet Explorer 10-11 */
+
+            :-ms-input-placeholder {
+                /* Internet Explorer 10-11 */
                 font-weight: lighter;
             }
-          
-            ::-ms-input-placeholder { /* Microsoft Edge */
+
+            ::-ms-input-placeholder {
+                /* Microsoft Edge */
                 font-weight: lighter;
             }
         }
@@ -100,7 +122,6 @@
             margin-top: 2%;
             border-radius: 65px;
             display: block;
-            
 
             /* offset-x | offset-y | blur-radius | color */
             box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.212);
@@ -108,7 +129,7 @@
         .passwordinput {
             width: 80%;
             height: 50px;
-            margin-top: 2%;
+            //margin-top: 2%;
             border-radius: 65px;
             display: block;
 
@@ -116,7 +137,7 @@
             box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.212);
         }
         .submitbutton {
-            width: 45%;
+            width: 80%;
             height: 70px;
             border-radius: 65px;
             background-color: white;
@@ -158,7 +179,6 @@ h2 {
 u {
     font-weight: bold;
 }
-
 
 /* Form */
 
